[tool.poetry]
name = "chat-test"
version = "0.1.0"
description = ""
authors = ["iiii4966 <dlarkqrl4966@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.1"
autobahn = "^21.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
